# Smarthome

./: README.md
smart_door_lock/: CMakeLists.txt  sdkconfig  sdkconfig.old
smart_door_lock/main/: CMakeLists.txt  mainApp.c
smart_door_lock/user/device/button/: CMakeLists.txt  button.c  button.h
smart_door_lock/user/device/fingerprint/: CMakeLists.txt  finger.c  finger.h
smart_door_lock/user/device/lcd/: lcd.c  lcd.h
smart_door_lock/user/device/password/: CMakeLists.txt  password.c  password.h
smart_door_lock/user/device/wifi/: CMakeLists.txt  wifi.c  wifi.h
smart_room/: CMakeLists.txt
smart_room/main/: CMakeLists.txt  main.c
smart_room/user/App/: CMakeLists.txt  mainApp.c  mainApp.h  sesion_communication.c
smart_room/user/dht22/: CMakeLists.txt  dht22.c  dht22.h
smart_room/user/lcd/: CMakeLists.txt  lcd.c  lcd.h
smart_room/user/mq2/: CMakeLists.txt  mq2.c  mq2.h
smart_room/user/sim/: CMakeLists.txt  sim.c  sim.h
smart_room/user/user_mqtt/: CMakeLists.txt  user_mqtt.c  user_mqtt.h
